chore: FO 3002, BO 3001 포트 변경 및 관련 설정 업데이트
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>